# jquiz

./: CMakeLists.txt  a.out  build.sh  data.db  dbtool  main.cpp  n3.txt  n4.txt  n5.txt  term.hpp
include/: bsc  db.hpp  dict.hpp  quiz.hpp  term.hpp  words.hpp
src/: db.cpp  dbtool.cpp  main.cpp  quiz.cpp  term.cpp
